Fixed image alignment issue and removed searchbar code in navbarnew.js as that code is not pushed yet.

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@
 
 /* Person header */
 .person .header {
-  height: 55px;
+  height: 60px;
   background-color: white;
   color: black;
   font-size: 20px;
